--- a/src/components/pages/Home/Home.scss
+++ b/src/components/pages/Home/Home.scss
@@ -112,7 +112,8 @@
 @media only screen and (max-width: 875px) {
     .home-image-title {
         position: absolute;
-        padding-left: 5%;
+        align-content: center;
+        justify-content: center;
         max-width: 95%;
         top: 5rem;
         text-align: center;
